--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -28,6 +28,9 @@ border:none;
 }
 
 
+li {
+    margin-left: 21px;
+}
 html, body{
 	height:100%;
 }
@@ -35,8 +38,8 @@ body {
 	box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	padding:18px 0;
-	border:4px solid rgb(63,169,245);
-	border-width:4px 4px 0 0;
+	border-top:4px solid rgb(63,169,245);
+
 	background-color:rgb(45,45,45);
 }
 body,input,button,textarea{
@@ -74,7 +77,7 @@ body > section {
     box-sizing: border-box;
     -moz-box-sizing: border-box;
 	padding:10px;
-    min-width: 1300px;
+    min-width: 1350px;
 
 
 }
@@ -138,7 +141,7 @@ textarea {
 
 
 aside:last-child {
-    max-width: 600px;
+    max-width: 550px;
 }
 aside:last-child pre {
     overflow: auto;
@@ -150,4 +153,61 @@ aside:last-child h1{
 
 pre {
     font-family: monospace !important;
+}
+
+
+.html-tag{
+
+    color: #dc3747;
+}
+
+.html-tag:before {
+    content:'<'
+}
+
+.html-tag:after {
+    content: '>';
+}
+
+.html-attr{
+    color: #00c200;
+
+}
+
+.html-attr:after{
+    content:"=";
+    color:#bdb76b;
+}
+
+.html-val {
+    color:rgb(63,169,245);
+}
+
+.html-val:before, .html-val:after{
+    content: '"';
+
+}
+
+
+.html-equals-sign{
+    color:white;
+}
+
+
+
+
+
+
+section > aside:last-child ul li pre {
+    display: inline;
+}
+
+section > aside:last-child pre.function-par-name{
+    display: block;
+    color:rgb(63,169,245);
+}
+
+section > aside:last-child li {
+    margin-top:5px;
+    margin-bottom: 5px;
 }
